# x11-lupe

./: Makefile  README.md  avionics.c  config.h.in  configure  configure.in  extern.h  icon.xbm  lupe.c  lupe.doc  option.c  timer.c  timer.h  version.h
